# py-project-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  flake.nix  justfile  pyproject.toml
app/: main.py  module.py
scripts/: cov-html.sh
src/: main.py
tests/: test_main.py
